    preseeds.
  * partdisks: library: mount_partition can now skip mountpoint check
    if check == False.
  * partdisks: library: fixed opts handling if remounting.
  * partdisks: inst: do not require "changed" from frontend.
  * partdisks: inst: bind-mount /dev, /sys and /proc (moved from
    unsquash).
  * frontends/gtk3: errors and steps handling.
  * userhost: gtk3 frontend: completed.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Wed, 25 Jan 2012 17:26:13 +0100

linstaller (2.10.5-1) pulse; urgency=low

  * Fixed setup.py

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 19 Jan 2012 17:12:24 +0100

linstaller (2.10.4-1) pulse; urgency=low

  * Added mirrorselect module.
  * Begin work on the gtk3 frontend.
  * Fixed crash if some updates are found.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 15 Jan 2012 16:34:21 +0100

linstaller (2.10.3-1) pulse; urgency=low

  * userhost: renamed the password_max_chars preseed to password_min_chars:
    should sleep a bit more.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 10 Jan 2012 20:04:08 +0100

linstaller (2.10.2-1) pulse; urgency=low

  * setup.py: do not ship semplice inst module, as it doesn't exist.
  * userhost: lowered minimum password charchters to 4, now
    configurable via the password_max_chars preseed.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 10 Jan 2012 19:52:07 +0100

linstaller (2.10.1-1) pulse; urgency=low

  * Added linstaller.frontends where store frontends core files.
  * core/:
    - ported cli_frontend to linstaller.frontends.cli
    - added frontend auto-discovery feature (default for 3.x modules)
    - pass the package path to Module
  * modules/:
    - Ported welcome and userhost to 3.x-style modules package structure.
  * debian/: new package linstaller-frontend-cli which ships the cli frontend.
  * setup.py: updated to install frontends and modules inst/front.
  * linstaller: moved the loop code to new function loop_modules().